--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,173 @@
     flex-direction: column; */
 
 }
+.nav-bar{
+    height: 80px;
+    width: 100%;
+    background-color: #1b1b1b;
+    padding: 0 200px;
+}
+.nav-ctn{
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-topic{
+    display: flex;
+
+    width: 500px;
+    justify-content: space-between;
+}
+.nav-topic a{
+    text-decoration: none;
+    color: #fff;
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 0.2px;
+    word-spacing: 5px;
+
+}
+.nav-logo{
+    display: flex;
+    align-items: center;
+}
+.nav-logo img{
+    width: 80px;
+}
+.nav-topic a:hover,.nav-topic a:focus{
+    color: #868686;
+
+}
+
+
+  .menu {
+    display: none;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .menu a{
+    text-decoration: none;
+
+    color: #fff;
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
+    font-size: 1rem;
+    letter-spacing: 0.2px;
+    word-spacing: 5px;
+  }
+  .menu a:hover,.menu a:focus{
+    color: #868686;
+
+}
+  .menu > a {
+    margin: 0 1rem;
+    overflow: hidden;
+  }
+  
+  .menu-button-container {
+    display: none;
+    height: 100%;
+    width: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #menu-toggle {
+    display: none;
+  }
+  
+  .menu-button,
+  .menu-button::before,
+  .menu-button::after {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+  }
+  
+  .menu-button::before {
+    content: '';
+    margin-top: -8px;
+  }
+  
+  .menu-button::after {
+    content: '';
+    margin-top: 8px;
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+  }
+  
+  #menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+  }
+  
+  @media (max-width: 600px) {
+    .menu-button-container {
+      display: flex;
+    }
+    .menu {
+      display: flex;
+      position: absolute;
+      top: 0;
+      margin-top: 80px;
+      left: 0;
+      flex-direction: column;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+    }
+    #menu-toggle ~ .menu a {
+      height: 0;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      text-align: left;
+    }
+    #menu-toggle:checked ~ .menu a {
+      border: 1px solid #1b1b1b;
+      height: auto;
+      padding: 20px 0;
+      text-align: left;
+      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    .menu > a {
+      display: flex;
+      justify-content: center;
+      margin: 0;
+
+      width: 100%;
+      color: white;
+      background-color: #222;
+    }
+    .menu > a:not(:last-child) {
+      border-bottom: 1px solid #444;
+    }
+    .nav-topic {
+        display: none;
+    }
+  }
+
 header{
     width: 100%;
     height: 1000px;
@@ -612,6 +779,14 @@ footer{
     .container{
         padding: 0;
     }
+    .nav-bar{
+        padding: 0;
+        padding: 0 20px;
+    }
+    .nav-topic{
+        margin-left: 50px;
+    }
+        
 }
 @media screen and (max-width: 1180px){
     .header-box, .our-sevice-box, .our-process-container, .veried-container, .ct-container, .footer-container{
@@ -740,6 +915,7 @@ footer{
         font-size: 2.1rem;
         margin: 0px 0 0px 0;
     }
+
 }
 @media screen and (max-width: 470px){
     .box, .box-2{
